peer review media

--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -26,7 +26,72 @@ html
     include ../navbar
 
     div.mainstyle
-      h3 2018 
+      h3 2018 - peer review publications
+      ul.fb--icon-list
+        li 
+          b PEVA/Performance 
+          br
+          | Eduardo Hargreaves, Claudio Agosti, Daniel Menasche, Giovanni Neglia, Alexandre Reiffers-Masson, and Eitan Altman. 
+          a(href="https://eduardohargreaves.files.wordpress.com/2018/11/fairness_arxiv.pdf") Fairness in online social network timelines: Measurements, models and mechanism design. 
+            i Performance Evaluation 
+          | (2018). DOI:10.1016/j.peva.2018.09.009 
+          a(href="https://arxiv.org/pdf/1809.05530.pdf") (arXiv)
+          br
+          pre.
+            @article{Hargreaves2018fairness,
+            author = {Hargreaves, Eduardo and Agosti, Claudio and Menasch{\'{e}}, Daniel and Neglia, Giovanni and Reiffers-Masson, Alexandre and Altman, Eitan},
+            doi = {10.1016/j.peva.2018.09.009},
+            issn = {01665316},
+            journal = {Performance Evaluation},
+            title = {{Fairness in online social network timelines: Measurements, models and mechanism design}},
+            year = {2018}
+            }
+
+        li 
+          b Fosint-SI
+          br
+          | Eduardo Hargreaves, Claudio Agosti, Daniel Menasche, Giovanni Neglia, Alexandre Reiffers-Masson, and Eitan Altman; 
+          a(href="https://arxiv.org/pdf/1807.08346.pdf") Biases in the Facebook News Feed: a Case Study on the Italian Elections
+          |, Fosint-SI 2018, in conjunction with ASONAM 2018, Proceedings of the 2018 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (
+          a(href="https://arxiv.org/pdf/1807.08346.pdf") ASONAM
+          |) DOI:10.1109/ASONAM.2018.8508659
+          pre.
+            @inproceedings{Hargreaves2018bias,
+            author = {Hargreaves, Eduardo and Agosti, Claudio and Menasche, Daniel and Neglia, Giovanni and Reiffers-Masson, Alexandre and Altman, Eitan},
+            booktitle = {2018 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM)},
+            doi = {10.1109/ASONAM.2018.8508659},
+            isbn = {978-1-5386-6051-5},
+            month = {aug},
+            number = {Section IV},
+            pages = {806--812},
+            publisher = {IEEE},
+            title = {{Biases in the Facebook News Feed: A Case Study on the Italian Elections}},
+            url = {https://ieeexplore.ieee.org/document/8508659/},
+            year = {2018}
+            }
+
+        li 
+          b Brasnam
+          br
+          | Eduardo Hargreaves, Daniel Sadoc Menasché, Giovanni Neglia, and Claudio Agosti, 
+          a(href="https://eduardohargreaves.files.wordpress.com/2018/07/visibilidade-facebook-modelos-7.pdf") Visibilidade no Facebook: Modelos, Medições e Implicações, in:
+          i  Proceedings of the Brazilian Workshop on Social Network Analysis and Mining (
+          a(href="https://eduardohargreaves.files.wordpress.com/2018/07/visibilidade-facebook-modelos-7.pdf") BraSNAM
+          |). Natal, Rio Grande do Norte, Brasil. Julho, 2018
+          a(href="http://portaldeconteudo.sbc.org.br/index.php/brasnam/article/view/3591") (file)
+          pre.
+            @article{brasnam,
+            author = {Eduardo Hargreaves and Daniel Menasché and Giovanni Neglia and Claudio Agosti},
+            title = {Visibilidade no Facebook: Modelos, Medições e Implicações},
+            journal = {Brazilian Workshop on Social Network Analysis and Mining (BraSNAM_CSBC)},
+            volume = {7},
+            number = {1/2018},
+            year = {2018},
+            issn = {2595-6094},
+            url = {http://portaldeconteudo.sbc.org.br/index.php/brasnam/article/view/3591}
+            }
+
+      h3 2018 - publications with NGO
       ul.fb--icon-list
         li TacticalTech publish a report written by Claudio Agosti and Fabio Chiusi, on 
             a(href="https://ourdataourselves.tacticaltech.org/posts/overview-italy/") Italian political election and digital propaganda
@@ -36,14 +101,6 @@ html
         li WebFoundation released a report produced by a joint collaboration:
             a(href="https://webfoundation.org/research/the-invisible-curation-of-content-facebooks-news-feed-and-our-information-diets/") The invisible curation of content
             |.
-        li The 
-            a(href="https://arxiv.org/abs/1807.08346") first academic paper
-            |  entirely based on FbTREX data, if you want to reference it:
-            pre.
-                @unpublished{FacebookFairness,
-                author = {Hargreaves, Eduardo and Agosti, Claudio and Menasch{\'{e}}, Daniel and Neglia, Giovanni and Reiffers-masson, Alexandre and Altman, Eitan},
-                booktitle = {to appear in the 36th International Symposium on Computer Performance, Modeling, Measurements and Evaluation 2018},
-                title = {{Fairness in Online Social Network Timelines : Measurements , Models and Mechanism Design}}
         li For the Italian elections 2018 has been made a dedicated campaign, with this dedicated website (in italian) 
           a(href="https://elezioni.tracking.exposed") https://elezioni.tracking.exposed
           |  some 
