restructured the project plan section

--- a/sections/navbar.pug
+++ b/sections/navbar.pug
@@ -18,7 +18,7 @@ block navbar
             li
               a(href='/privacy-statement') Privacy 
             li
-              a(href='/project') The Project 
+              a(href='/project') Project plan
             li
               a(href='/impact/') Stats
             li
