--- a/styles/index.styl
+++ b/styles/index.styl
@@ -238,3 +238,15 @@ p
     position: relative;
     height: 40px;
     width: 120px;
+
+/* used in project plan (glossary) */
+.glossary
+    border-top 10px
+    font-size 1.45em
+
+.term
+    font-weight 700
+    color darkblue
+
+.glossary ul
+    font-size 1.45em
