improved/cleaned again the project status and vision pages

--- a/sections/navbar.pug
+++ b/sections/navbar.pug
@@ -18,7 +18,7 @@ block navbar
             li
               a(href='/privacy-statement') Privacy 
             li
-              a(href='/project') Project plan
+              a(href='/project') Project vision and analysis
             li
               a(href='/impact/') Stats
             li
