--- a/sections/project/index.pug
+++ b/sections/project/index.pug
@@ -7,8 +7,8 @@ include hdrnavbar
 
     ul.fb--icon-list
         li 
-            a(href="") Project plan, in .pdf
-            |  updated to winter 2018, 15 pages. 
+            a(href="https://github.com/tracking-exposed/presentation/raw/master/fbTREX%20-%20project%20status%20and%20analysis%20-%20December%202018.pdf") Project vision and status, in .pdf
+            |  updated to winter 2018. It is the same content you can get by following the links below (15 pages).
         li
             a(href='/project/glossary') Glossary
             |  explaining fourteen terms often used in the project plan
@@ -27,11 +27,15 @@ include hdrnavbar
 
     h2 Acknowledgements
 
-    p A bunch of persons dedicated their free time reading, guessing and questioning this document. Was not simple, as first because I write in a contorted way, as second, because of the topic mix criticism in technology, techno-politics and unexplored path of algorithm empowerment.
-    This project is a process, in which nobody walks alone. An unknown path, in dealing against one of the hidden phenomena of our time. You trusted me with your time and attention; I would do my best to include your inputs in the governance of the project and in the community development.
-    p The most crucial editing phase was lead by Arikia Millikan, which took a quite confused document and transformed to the current shape.
-    p Two significant contribution comes from Barbara Gianessi and Sophia Charleson, with valuable insights, patience, and questioning, they helped the development of the document. Sophia, also, authored the Glossary.
-    p Additional revision and editing effort come from Beatrice Cavicchioli, with the best wishes for her career in privacy and digital safety, and Giovanni Civardi, also known as the system administrator and first sponsor of https://facebook.tracking.exposed ;)
+    p A bunch of persons dedicated their free time reading, guessing and questioning this document. Was not simple, as first because I write in a contorted way, as second, because the topic mixes criticism in technology, techno-politics, and an experperiment for social empowerment in the digital age.
+    p The TRex project is an unknown path in which nobody can walk alone. We deal against one of the hidden phenomena of our time, pushed by our ethics and political beliefs. You trusted me and this project with your time and attention; I would do my best to include your inputs in the governance of the project and community development.
+    br
+    p The most crucial editing phase was lead by 
+        a(href="https://arikia.com") Arikia Millikan
+        |, which took a quite confused document and transformed to the current shape.
+    p Other significant contribution comes from Barbara Gianessi, Beatrice Cavicchioli, Giovanni Civardi, and Sophia Charleson. With their valuable insights, patience, and questioning, they helped a lot the development of this document, challenging the assumptions and producing a smooth exposure even in the most complicated parts. Sophia also authored the 
+        a(href="/project/glossary") Glossary
+        |.
 
     h3(style="border-top:black 1px solid") As historical reference, the project description by July 2017
 
