commented the sections still unclean and with missing links

--- a/sections/project/glossary.pug
+++ b/sections/project/glossary.pug
@@ -27,7 +27,7 @@ include hdrnavbar
             li The component that receives your password and checks if is correct or not.
             li A component which reads the words we type and marks the typos with a red line.
             li The complex system which transforms our search query to a number of results on google.com.
-            li The formula that computes the length of the perimeters of a triangle. 
+            li The formula that computes the length of the perimeters of a triangle.
         | Basically every mathematical operation is an algorithm. It is also called "a function". And this function, because is mathematical, it is perceived as correct, neutral, fair, accountable and too complicated to be bothered by. The reality is different, algorithms are secret, complex, used to hide bias and imbalances, unfair because of the model on which they are based, even 
         a(href="https://en.wikipedia.org/wiki/Computer_says_no") dehumanizing
         |.
@@ -76,7 +76,7 @@ include hdrnavbar
 
     p.glossary
         span.term HTML
-        |: is the format, or the language, in which web-pages are made. If you press control+U or apple+U on a web browser, you'll see the HTML code which the page is composed from. This is why sometimes you see the page name ending with .html. This file is textual, so it can be opened with a simple text editor like libreoffice, but you need a browser to actually read it and display it according to the graphic decisions made by the web designer. You'll recognize it because it's full of words which never appear on the final page, like &lt;html&gt;&lt;body&gt;
+        |: is the format, or the language, in which web-pages are made. If you press control+U or apple+U on a web browser, you'll see the HTML code which the page is composed from. This is why sometimes you see the page name ending with .html. This file is textual, so it can be opened with a simple text editor like libreoffice, but you need a browser to actually read it and display it according to the graphic decisions made by the web designer. You'll recognize it because it's full of words which never appear on the final page.
         |.
 
     p.glossary
