continous fixing and fixing of the project page

--- a/sections/project/hdrnavbar.pug
+++ b/sections/project/hdrnavbar.pug
@@ -58,7 +58,9 @@ html
                 .collapse.navbar-collapse(id="thenavbar")
                     ul.nav.navbar-nav
                         li
-                            a(href='/project') start 
+                            a(href='/') Home
+                        li
+                            a(href='/project') .pdf 
                         li
                             a(href='/project/glossary') Glossary
                     //-
