--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -26,6 +26,12 @@ html
     include ../navbar
 
     div.mainstyle
+      h3 2019 - upcoming campaign
+      ul.fb--icon-list
+        li European Election monitoring: 
+            a(href="https://github.com/tracking-exposed/presentation/blob/master/European%20Election%20action%20plan%20-%20v1.3.pdf") high level project description
+            |.
+     
       h3 2018 - peer review publications
       ul.fb--icon-list
         li 
