imported glossary style, fixed a bug on personalHTML, fixed few formatting

--- a/sections/project/hdrnavbar.pug
+++ b/sections/project/hdrnavbar.pug
@@ -58,9 +58,9 @@ html
                 .collapse.navbar-collapse(id="thenavbar")
                     ul.nav.navbar-nav
                         li
-                            a(href='/') Home
+                            a(href='/') Back to home
                         li
-                            a(href='/project') .pdf 
+                            a(href='/project') Info & Download
                         li
                             a(href='/project/glossary') Glossary
                     //-
