--- a/sections/project/index.pug
+++ b/sections/project/index.pug
@@ -56,7 +56,8 @@ include hdrnavbar
     p The 
         a(href="https://trackin.expoded") TRex project
         |  is an unknown path in which nobody can walk alone. We deal against one of the hidden phenomena of our time, pushed by our ethics and political beliefs. You trusted this project with your time and attention. To the editing group, the 
-        a(href="/about") team, and the code 
+        a(href="/about") team
+        |, and the code 
         a(href="https://github.com/tracking-exposed/facebook/graphs/contributors") contributors
         |  go the commitment to shapeing the community and the project together.
 
