--- a/sections/team.pug
+++ b/sections/team.pug
@@ -55,7 +55,7 @@ html
                         p Our, sub-optimally used, Facebook page: 
                             a(href="https://www.facebook.com/personalizationalgorithm") Personalisation Algorithms
                     div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-                        p Telegram bot, a work in progress
+                        p Telegram bot 
                             a(href="https://t.me/fbTREXupdates") fbTREX updates
 
         div.mainstyle
@@ -67,9 +67,10 @@ html
                         small successfully got our first small grant.
                     div.col-xs-4.col-sm-4.col-md-4.col-lg-4
                         p Dandelion, Spaziodati
-                        small getting anonymized data and doing semanting analysis
+                        small semanting analysis engine
                     div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-                        p Data Transparency Lab (2018)
+                        p Data Transparency Lab 
+                        small 2018 price and grant
                 div.topheader
                     div.col-xs-4.col-sm-4.col-md-4.col-lg-4
                         p WebFoundation (2017)
@@ -135,20 +136,20 @@ html
                         td 
                             a(href="https://twitter.com/raimondian" target="_blank") Andrea Raimondi
                             br
-                            philosophical support
+                            | philosophical support
                         td 
                             a(href="https://twitter.com/gmcmullen" target="_blank") Greg McMullen
                             br
-                            privacy and legal assessment
+                            | privacy and legal assessment
                         td 
                             a(href="https://twitter.com/osd_it" target="_blank") OpenSensorsData
                             br
                             | project management, strategy
-                    tr
                         td 
                             a(href="https://twitter.com/@faffa42" target="_blank") Raffaele Angus
                             br
                             | for the Italian elections
+                    tr
                         td 
                             a(href="https://twitter.com/Gilberto_Conti" target="_blank") Gilberto Conti
                             br
