fixed a typo (Prizes!!)

--- a/sections/team.pug
+++ b/sections/team.pug
@@ -59,7 +59,7 @@ html
                             a(href="https://t.me/fbTREXupdates") fbTREX updates
 
         div.mainstyle
-            h2 Sponsor, Partners and Prices
+            h2 Sponsor, Partners, and Awards
             div.container
                 div.topheader
                     div.col-xs-4.col-sm-4.col-md-4.col-lg-4
@@ -109,7 +109,7 @@ html
                             | editing and various help
                         td Sophia Charleston
                             br
-                            | Editing and various help
+                            | editing and communication
                         td 
                             a(href="https://github.com/joxer" target="_blank") Diego Luca Candido
                             br
@@ -136,7 +136,7 @@ html
                         td 
                             a(href="https://twitter.com/raimondian" target="_blank") Andrea Raimondi
                             br
-                            | philosophical support
+                            | project management and concept analysis
                         td 
                             a(href="https://twitter.com/gmcmullen" target="_blank") Greg McMullen
                             br
@@ -148,7 +148,7 @@ html
                         td 
                             a(href="https://twitter.com/@faffa42" target="_blank") Raffaele Angus
                             br
-                            | for the Italian elections
+                            | researcher, italian elections analysis
                     tr
                         td 
                             a(href="https://twitter.com/Gilberto_Conti" target="_blank") Gilberto Conti
