small tuninig again to the personal/landing footer message

--- a/sections/personal/landing.pug
+++ b/sections/personal/landing.pug
@@ -115,6 +115,6 @@ html
         include csv
 
     div.footer
-        small This interface is a work in progress. wants to show only the data actually analyzed in the meanwhile, would be improved. you are interested, feel welcome in 
-            a(href="https://github.com/tracking-exposed/facebook/blob/master/sections/webscripts/personal.js") contributing 
-            | =)
+        small This interface is a work in progress. At the moment can only show few metadata extracted by the timeline you submit. improve UX and functionalities is out goal for 2019. If you want to contribute to the free software project,  
+            a(href="https://github.com/tracking-exposed/facebook/blob/master/sections/webscripts/personal.js") feel welcomed
+            |.
