ops, sorry Sophie

--- a/sections/project/index.pug
+++ b/sections/project/index.pug
@@ -42,8 +42,8 @@ include hdrnavbar
         |, 
         b Giovanni Civardi
         |, and 
-        b Sophia Charleson
-        |. With their valuable insights, patience, and questioning, they helped a lot the development of this document, challenging the assumptions and producing a smooth exposure even in the most complicated parts. Sophia also authored the 
+        b Sophie Charleson
+        |. With their valuable insights, patience, and questioning, they helped a lot the development of this document, challenging the assumptions and producing a smooth exposure even in the most complicated parts. Sophie also authored the 
         a(href="/project/glossary") Glossary
         |.
 
