--- a/sections/team.pug
+++ b/sections/team.pug
@@ -107,7 +107,7 @@ html
                         td Barbara Gianessi
                             br
                             | editing and various help
-                        td Sophia Charleston
+                        td Sophie Charleson
                             br
                             | editing and communication
                         td 
