updated 404 with new contacts

--- a/sections/404.pug
+++ b/sections/404.pug
@@ -20,5 +20,10 @@ html
     .container-fluid.center
         h1 Page not found! 
 
-        h3 If you found a broken link, please 
-          a(href="https://github.com/tracking-exposed/facebook") report the error to the developers 
+        h3 If you found a broken link, please consider reporting it to 
+            a(href="https://www.facebook.com/personalizationalgorithm") our Facebook page
+            |, or in the developer 
+            a(href="https://chat.securitywithoutborders.org/community/channels/trackingexposed") chat
+            |.
+        p This, because we exclude you don't use github. If is the case, on the heeader, there are our repositories linked ;)
+
