--- a/sections/personal/landing.pug
+++ b/sections/personal/landing.pug
@@ -103,6 +103,8 @@ html
 
     .container-fluid
       .pageSection#dataSection.hidden
+        h1 This page is going to be discontinued
+        h3 the technology used to extract the metadata is changing and also the interface, something might not look OK
         p These are the data you sent us so far:
         div#contributionBlock
     //-
