--- a/sections/team.pug
+++ b/sections/team.pug
@@ -33,30 +33,37 @@ html
 
         div.mainstyle
             h2 Contacts:
-            div.container
-                div.topheader
-                    div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-                        p The issue trackers: 
-                            div < 
-                                img.githublogo(src="/images/github-256.png")
-                                a(href="https://github.com/tracking-exposed/web-extension/issues") browser extension
-                                |, 
-                                a(href="https://github.com/tracking-exposed/facebook/issues") backend
-                                |  /> 
-                    div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-                        p 
-                            span.glyphicon.glyphicon-envelope
-                            |  a kind e-mail
-                        small change the [﹫・], they are not what they looks
-                        p
-                            b support﹫tracking・exposed
-                div.topheader
-                    div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-                        p Our, sub-optimally used, Facebook page: 
-                            a(href="https://www.facebook.com/personalizationalgorithm") Personalisation Algorithms
-                    div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-                        p Telegram bot, a work in progress
-                            a(href="https://t.me/fbTREXupdates") fbTREX updates
+            table.table.table-striped
+                tbody
+                    tr
+                        td
+                            p Our Facebook page: 
+                                a(href="https://www.facebook.com/personalizationalgorithm") Personalisation Algorithms
+                        td
+                            p Telegram bot: 
+                                a(href="https://t.me/fbTREXupdates") fbTREX updates
+                        td
+                            p The issue trackers: 
+                                div < 
+                                    img.githublogo(src="/images/github-256.png")
+                                    a(href="https://github.com/tracking-exposed/web-extension/issues") browser extension
+                                    |, 
+                                    a(href="https://github.com/tracking-exposed/facebook/issues") backend
+                                    |  /> 
+                    tr
+                        td
+                            p 
+                                span.glyphicon.glyphicon-envelope
+                                |  an e-mail
+                            small change the [﹫・], they are not what they looks
+                            p
+                                b support﹫tracking・exposed
+                        td
+                            P Mattermost 
+                                a(href="https://chat.securitywithoutborders.org/community/channels/trackingexposed") chat
+                        td
+                            p Twitter 
+                                a(href="https://twitter.com/hashtag/fbTREX?src=hash") #fbTREX
 
         div.mainstyle
             h2 Sponsor, Partners and Prices
