fixed summary landing

--- a/sections/personal/landing.pug
+++ b/sections/personal/landing.pug
@@ -32,10 +32,10 @@ html
 
         include header
 
-        .conainter-fluid.core
-            h1 Summary (coming soon)
-            h3 The page you saw until the 8th of January is discontinue, now a better UX would be implemented in the next days; you can access to your new set of metadata from:
+        .containter-fluid
+            h1.mainstyle Your data summary??! (coming soon)
+            h3.mainstyle The page you saw until the 8th of January is discontinued. A better UX would be implemented in the next days; you can access to your metadata from this API:
                 p#summary
-            | To know more about the roadmap, check the 
-            a(href="/about") contact
-            |  page.
+                | To know more about the roadmap, get in touch with the 
+                a(href="/about") contact
+                |  page.
